[tool.poetry]
name = "sweet-cats-and-hedgehogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sweet_cats_and_hedgehogs"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.981"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
