[tool.poetry]
name = "sweet-cats-and-hedgehogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sweet_cats_and_hedgehogs"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<4.1.0"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
psycopg2 = "^2.9.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "<0.970"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "drf_api.config.settings"
